# ChangeLog for games-fps/gzdoom
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  22 Jun 2010; Mike MacDonald (crazymykl) <crazymykl@gmail.com>
  +gzdoom-1.4.8.ebuild, +gzdoom-9999.ebuild, +metadata.xml, +pubkey.txt:
  New Ebuild for bug 323131, thanks to all in #gentoo-sunrise
