@@ -1,5 +1,7 @@
 DIST gzdoom-1.4.8.tar.bz2 3416057 RMD160 0faa93b5a2fea5f1559644ce4edfda695818dc16 SHA1 acdafb686961f0b1099dbbd7addcb312303e88a8 SHA256 ddac1b53acd8c6086ddb5ccad549d1ab817ca2f566748b19b53e22b1a1d551f9
+DIST gzdoom-1.5.0.tar.bz2 3633413 RMD160 03babcea48b7691601beb24f907f281054ee044f SHA1 776bd1b5e9ee1e2e750aa60dfd2a6a4a63ab5f4a SHA256 e543bfad3d5d98bf22490ce09e6c465b9963989853a6d5fd7c5749d4c01b9cc7
 EBUILD gzdoom-1.4.8.ebuild 1409 RMD160 5188839d05f83167ce08e8ac8ad95765f0508781 SHA1 873961a0b4f1925137037661e31d764f6c4ccea3 SHA256 3b9400c374cdc162184d2a6152dec1f185281319f2ada12d67db86d1228cf5ff
+EBUILD gzdoom-1.5.0.ebuild 1409 RMD160 49e62eb3ebca5a26937ecddaaee1827ef008d0ab SHA1 22d95d0baeacb0d60f1f063cb3fc7cc22bcdca80 SHA256 4363b9df9873ff6cb7068f8db5c9ad241e5a2aa73f6b1a513d74716cabfb8460
 EBUILD gzdoom-9999.ebuild 1507 RMD160 1faa6387968539823451c41e16ce9a6176356dab SHA1 68fb9278e50ac37f647c293a2a12e52e60d5e9ed SHA256 6eb57eeab4c51dde5450ef071a18fada8cc7cb142861a662a9c2ca9186d38a49
-MISC ChangeLog 317 RMD160 885d3a8158ad33b782348298227e89a1ee5a18a8 SHA1 d32546f4800c1ecef67027512ba156f22f3be058 SHA256 75c129ebd5486176514712b3fe72527c895cc63f11b4b09acf334df209afb841
+MISC ChangeLog 428 RMD160 b16a62e7534114173634a0e7b80fc0befd8020a0 SHA1 7cca8dbe3fb7796e4ee963512d0e3e12a33cdd60 SHA256 5d5e15373d00cdfa63a1ac79d30bf880eb3af9078fccbeee70c9f0ea322cf383
 MISC metadata.xml 229 RMD160 f0f6417bec31ce8baba6d476664f7210c8c84c98 SHA1 e5f94f5caadc6f843fc90bb7959570cd503676fd SHA256 3b08fca3c878bdfc4e7639f477dd542d55a4ab5dce39a475e82633071d13eb3f
